# ot-harjoitustyo-Keskeytynyt-

./: .gitignore  README.md  pyproject.toml
Dokumentaatio/: työaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md.save
src/: .cache  .cache-.!frame.!entry  .cache-<bound method StringVar.get of <tkinter.StringVar object at 0x7f3f8fffa160>>  README.md  index.py
src/application/: .cache-21as4yvrgnnnjpzb7qqbcoyva  SpotifyCredentials.py  playlist_functionality.py
src/objects/: user.py
src/tests/: functionality_test.py
src/ui/: UI.py  generator_view.py
