[tool.poetry]
name = "\"Soittolista generaattori\""
version = "0.1.0"
description = ""
authors = ["Niilo <niilo.lehtonen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.19.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
